@@ -78,6 +78,9 @@
                     <source>24</source>
                     <target>24</target>
                     <parameters>true</parameters>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -86,7 +89,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.5</version>
                 <configuration>
-<!--                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>-->
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
